# research-navigator

./: .coverage  .env  .pre-commit-config.yaml  README.md  docker-compose.yml  evaluation_report.json  evaluation_report.md  mypy.ini  pyproject.toml  reset_collection.py  run_eval.py  test_bm25.py  test_citations.py  test_confidence.py  test_eval.py  test_filtered_retrieval.py  test_graph.py  test_hybrid.py  test_ingest.py  test_m3.py  test_query_pipeline.py  test_query_understanding.py  test_refusal.py  test_retriever.py  visualize_graph.py
ADR/: 001_embedding_model.md  002_chunking_strategy.md  003_hybrid_retrieval.md  004_refusal_threshold.md
docs/: architecture.md  m3_design_notes.md
src/research_navigator/agent/: graph.py  router.py  state.py
src/research_navigator/config/: settings.py
src/research_navigator/evaluation/: citation_faithfulness.py  compare_configs.py  dense_vs_hybrid.py  evaluation_runner.py  evaluator.py  golden_set.json  metrics.py  (+3 more)
tests/: eval_questions.txt  m3_queries.txt  test_answer_generator_real.py  test_citation_builder.py  test_config.py  test_evaluator.py  test_evaluator_real.py  test_hybrid_retriever.py  test_hybrid_retriever_real.py  test_logger.py  test_metrics.py  test_metrics_edge.py  test_metrics_more.py  test_parser.py  test_parser_pdf_branch.py  test_parser_real.py  test_query_pipeline.py  test_query_pipeline_low_score.py  test_query_pipeline_real.py  test_query_pipeline_refusal.py  test_query_understanding.py  test_refusal_evaluator.py  test_refusal_evaluator_not_refused.py  test_refusal_evaluator_real.py  test_retriever.py
(+23 files in other folders)
