[project]
name = "research-navigator"
version = "0.1.0"
description = "AI Research Navigator"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "google-generativeai>=0.8.6",
    "langchain-core>=1.4.1",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.4",
    "markdown-it-py>=4.2.0",
    "pydantic-settings>=2.14.1",
    "pymupdf>=1.27.2.3",
    "python-dotenv>=1.2.2",
    "qdrant-client>=1.18.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_navigator"]

[dependency-groups]
dev = [
    "detect-secrets>=1.5.0",
    "hatchling>=1.30.1",
    "mypy>=2.1.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.16",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
strict = true
python_version = "3.13"

[tool.pytest.ini_options]

testpaths = [
    "tests"
]